# parking-violations

./: .gitignore  phase1_report.md  phase2_report.md
labs/bakeryME/: CMakeLists.txt  bakeryME.cpp
labs/basic/: CMakeLists.txt  README.md
labs/color/: CMakeLists.txt  color.cpp  groups.hpp
labs/dijkstraME/: CMakeLists.txt  README.md  dijkstraME-v2.cpp  dijkstraME.cpp
labs/hello/: CMakeLists.txt  README.md  hello-cout.cpp  hello-omp2.cpp  hello-plain.cpp  hello-target.cpp
labs/hello/b/: Makefile  cmake_install.cmake  hello  hello-cout  hello-omp  hello-omp2  hello-target
labs/leader/: CMakeLists.txt  README.md  leader.cpp  task.hpp  worker.hpp
labs/loop/: build.sh  loop.cpp
labs/pi/: README.md
labs/round/: CMakeLists.txt  round-ex.cpp
labs/shmem/: CMakeLists.txt  README.md  defs.h  shm-client.c  shm-server.c
labs/tasks/: CMakeLists.txt  README.md  tasks.cpp
labs/tasks-nested/: CMakeLists.txt  README.md  tasks-nested.cpp
phase1/: CMakeLists.txt
phase1/examples/: basic_usage.cpp
phase1/src/: CMakeLists.txt  csv_reader.cpp  parking.cpp  parking.hpp  record.cpp  record.hpp  search.cpp  search.hpp
phase1/src/api/: parking_api.cpp  parking_api.hpp
phase1/src/apps/: demo.cpp  load_benchmark.cpp  search_benchmark.cpp
phase1/src/core/: text_ref.hpp
phase1/src/data/: data_store.cpp  data_store.hpp  text_pool.hpp
phase1/src/io/: csv_parser.hpp  csv_reader.cpp  csv_reader.hpp  file_loader.cpp  file_loader.hpp
phase1/src/search/: indexed_search.cpp  linear_search.hpp  search_result.hpp
phase1/test/: CMakeLists.txt  test_parser.cpp  test_search.cpp
phase2/: CMakeLists.txt
phase2/examples/: CMakeLists.txt  basic_usage.cpp
phase2/scripts/: plot_results.py
phase2/src/: CMakeLists.txt  csv_reader.cpp  csv_reader.hpp  parking.cpp  parking.hpp  record.cpp  record.hpp  search.cpp  search.hpp
phase2/src/api/: parking_api.cpp  parking_api.hpp
phase2/src/apps/: demo.cpp  load_benchmark.cpp  search_benchmark.cpp
phase2/src/core/: field_types.hpp  violation_record.cpp  violation_record.hpp
phase2/src/data/: text_pool.hpp
phase2/src/io/: csv_parser.cpp  csv_reader.cpp
phase2/src/search/: indexed_search.cpp  indexed_search.hpp  linear_search.cpp  parallel_search.cpp  parallel_search.hpp  search_engine.hpp
phase2/test/: test_parser.cpp  test_search.cpp
phase3/: CMakeLists.txt  phase3_report.md
phase3/examples/: CMakeLists.txt  basic_usage.cpp
phase3/src/: CMakeLists.txt  benchmark_harness.hpp  csv_parser.hpp  parking.cpp  parking.hpp  record.hpp  soa_csv_reader.cpp  soa_csv_reader.hpp  soa_search.cpp  soa_search.hpp  soa_store.cpp  soa_store.hpp
phase3/src/apps/: demo.cpp  load_benchmark.cpp  search_benchmark.cpp
phase3/test/: CMakeLists.txt  test_soa_parser.cpp  test_soa_search.cpp
scripts/: preprocess.py  run_benchmarks.sh
